# marvel-api-rs

./: Cargo.toml  README.md
.github/workflows/: main.yml
examples/: example.rs
src/: client.rs  common.rs  errors.rs  lib.rs
src/api/: api.rs  character.rs  error.rs  mod.rs
src/model/: characters.rs  comics.rs  common.rs  creators.rs  data_container.rs  data_type.rs  data_wrapper.rs  events.rs  mod.rs  series.rs  stories.rs
src/schema/: character.rs  comic.rs  common.rs  event.rs  mod.rs  series.rs  story.rs
tests/: integration.rs  integration_tests.rs
