[package]
name = "marvel-api-rs"
description = "An API wrapper around the Marvel official API"
version = "0.0.0"
authors = ["Yves Bonami <yves.bonami@gmail.com>"]
license = "MIT" 
edition = "2018"
homepage = "https://github.com/yves-bonami/marvel-api-rs"
repository = "https://github.com/yves-bonami/marvel-api-rs"
readme = "README.md"