[package]
name = "marvel-api-rs"
description = "An API wrapper around the Marvel official API"
version = "0.0.0"
authors = ["Yves Bonami <yves.bonami@gmail.com>"]
license = "MIT" 
edition = "2018"
homepage = "https://github.com/yves-bonami/marvel-api-rs"
repository = "https://github.com/yves-bonami/marvel-api-rs"
readme = "README.md"

[dependencies]
chrono = { version = "0.4", features = [ "serde" ] }
md5 = "0.7"
serde = { version = "1.0", features = [ "derive" ] }
ureq = { version = "2.0", features = [ "json", "tls" ] }
isahc = { version = "1.3", features = [ "json" ] }
url = "1.3"

[dev-dependencies]
mockito = "0.30"