[package]
name = "marvel-api"
description = "An API wrapper around the Marvel official API"
version = "0.0.0"
authors = ["Yves Bonami <yves.bonami@gmail.com>"]
license = "MIT"
edition = "2018"
homepage = "https://github.com/yves-bonami/marvel-api-rs"
repository = "https://github.com/yves-bonami/marvel-api-rs"
readme = "README.md"

[dependencies]
attohttpc = { version = "0.17", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
md5 = "0.7"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"

[dev-dependencies]
mockito = "0.30"
tracing-subscriber = "0.2"
